Labs/disallow-privileged-containers/.chainsaw-test/bad-resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod
spec:
  containers:
  - name: container01
    image: nginx
    securityContext:
      privileged: true
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
        securityContext:
          privileged: true
